--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "node": "^23.8.0",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.13.1"
+    "path": "^0.12.7",
+    "pg": "^8.13.1",
+    "sharp": "^0.33.5",
+    "url": "^0.11.4"
   }
 }
