--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "connect-pg-simple": "^10.0.0",
     "dotenv": "^16.4.7",
