--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "npm install"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
