--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.6.0",
     "compression": "^1.8.0",
     "connect-pg-simple": "^10.0.0",
     "dotenv": "^16.4.7",
