--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^8.13.1",
+    "resend": "^6.4.2",
     "url": "^0.11.4"
   }
 }
